--- a/print.html
+++ b/print.html
@@ -77,7 +77,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="installation.html"><strong aria-hidden="true">1.1.</strong> Installation</a></li><li class="chapter-item "><a href="demos.html"><strong aria-hidden="true">1.2.</strong> Demos</a></li></ol></li><li class="chapter-item "><a href="ros2.html"><strong aria-hidden="true">2.</strong> ROS 2</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="ros2_tools_resources.html"><strong aria-hidden="true">2.1.</strong> ROS Resources</a></li><li class="chapter-item "><a href="ros2_design_patterns.html"><strong aria-hidden="true">2.2.</strong> ROS Concepts and Design Patterns</a></li><li class="chapter-item "><a href="ros2_cli.html"><strong aria-hidden="true">2.3.</strong> The ROS Command Line Interface</a></li><li class="chapter-item "><a href="ros2_api.html"><strong aria-hidden="true">2.4.</strong> The ROS API</a></li></ol></li><li class="chapter-item "><a href="traffic-editor.html"><strong aria-hidden="true">3.</strong> Traffic Editor</a></li><li class="chapter-item "><a href="simulation.html"><strong aria-hidden="true">4.</strong> Simulation</a></li><li class="chapter-item "><a href="rmf-core.html"><strong aria-hidden="true">5.</strong> RMF Core Overview</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rmf-core_faq.html"><strong aria-hidden="true">5.1.</strong> Frequently Asked Questions</a></li></ol></li><li class="chapter-item "><a href="task.html"><strong aria-hidden="true">6.</strong> Tasks in RMF</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="task_planner.html"><strong aria-hidden="true">6.1.</strong> RMF Task Allocation Planner</a></li><li class="chapter-item "><a href="task_types.html"><strong aria-hidden="true">6.2.</strong> Currently supported Tasks</a></li><li class="chapter-item "><a href="task_userdefined.html"><strong aria-hidden="true">6.3.</strong> User-defined Tasks</a></li><li class="chapter-item "><a href="task_new.html"><strong aria-hidden="true">6.4.</strong> Supporting a new Task</a></li></ol></li><li class="chapter-item "><a href="soss.html"><strong aria-hidden="true">7.</strong> SOSS</a></li><li class="chapter-item "><a href="integration.html"><strong aria-hidden="true">8.</strong> Integration</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="integration_nav-maps.html"><strong aria-hidden="true">8.1.</strong> Navigation Maps</a></li><li class="chapter-item "><a href="integration_fleets.html"><strong aria-hidden="true">8.2.</strong> Mobile Robot Fleets</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="integration_fleets_tutorial.html"><strong aria-hidden="true">8.2.1.</strong> Tutorials</a></li></ol></li><li class="chapter-item "><a href="integration_free-fleet.html"><strong aria-hidden="true">8.3.</strong> Free Fleet</a></li><li class="chapter-item "><a href="integration_read-only.html"><strong aria-hidden="true">8.4.</strong> Read-Only Fleets</a></li><li class="chapter-item "><a href="integration_doors.html"><strong aria-hidden="true">8.5.</strong> Doors</a></li><li class="chapter-item "><a href="integration_lifts.html"><strong aria-hidden="true">8.6.</strong> Lifts (Elevators)</a></li><li class="chapter-item "><a href="integration_workcells.html"><strong aria-hidden="true">8.7.</strong> Workcells</a></li></ol></li><li class="chapter-item "><a href="rmf-web.html"><strong aria-hidden="true">9.</strong> RMF Web</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="ui.html"><strong aria-hidden="true">9.1.</strong> User Interfaces</a></li></ol></li><li class="chapter-item "><a href="security.html"><strong aria-hidden="true">10.</strong> Security</a></li><li class="chapter-item "><a href="roadmap.html"><strong aria-hidden="true">11.</strong> Roadmap</a></li></ol>
+                <ol class="chapter"><li class="chapter-item "><a href="intro.html"><strong aria-hidden="true">1.</strong> Introduction</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="installation.html"><strong aria-hidden="true">1.1.</strong> Installation</a></li><li class="chapter-item "><a href="demos.html"><strong aria-hidden="true">1.2.</strong> Demos</a></li></ol></li><li class="chapter-item "><a href="ros2.html"><strong aria-hidden="true">2.</strong> ROS 2</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="ros2_tools_resources.html"><strong aria-hidden="true">2.1.</strong> ROS Resources</a></li><li class="chapter-item "><a href="ros2_design_patterns.html"><strong aria-hidden="true">2.2.</strong> ROS Concepts and Design Patterns</a></li><li class="chapter-item "><a href="ros2_cli.html"><strong aria-hidden="true">2.3.</strong> The ROS Command Line Interface</a></li><li class="chapter-item "><a href="ros2_api.html"><strong aria-hidden="true">2.4.</strong> The ROS API</a></li></ol></li><li class="chapter-item "><a href="traffic-editor.html"><strong aria-hidden="true">3.</strong> Traffic Editor</a></li><li class="chapter-item "><a href="simulation.html"><strong aria-hidden="true">4.</strong> Simulation</a></li><li class="chapter-item "><a href="rmf-core.html"><strong aria-hidden="true">5.</strong> RMF Core Overview</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="rmf-core_faq.html"><strong aria-hidden="true">5.1.</strong> Frequently Asked Questions</a></li></ol></li><li class="chapter-item "><a href="task.html"><strong aria-hidden="true">6.</strong> Tasks in RMF</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="task_planner.html"><strong aria-hidden="true">6.1.</strong> RMF Task Allocation Planner</a></li><li class="chapter-item "><a href="task_types.html"><strong aria-hidden="true">6.2.</strong> Currently supported Tasks</a></li><li class="chapter-item "><a href="task_userdefined.html"><strong aria-hidden="true">6.3.</strong> User-defined Tasks</a></li><li class="chapter-item "><a href="task_new.html"><strong aria-hidden="true">6.4.</strong> Supporting a new Task</a></li></ol></li><li class="chapter-item "><a href="soss.html"><strong aria-hidden="true">7.</strong> SOSS</a></li><li class="chapter-item "><a href="integration.html"><strong aria-hidden="true">8.</strong> Integration</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="integration_nav-maps.html"><strong aria-hidden="true">8.1.</strong> Navigation Maps</a></li><li class="chapter-item "><a href="integration_fleets.html"><strong aria-hidden="true">8.2.</strong> Mobile Robot Fleets</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="integration_fleets_tutorial.html"><strong aria-hidden="true">8.2.1.</strong> Tutorials</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="integration_fleets_tutorial_python.html"><strong aria-hidden="true">8.2.1.1.</strong> Python Tutorial</a></li><li class="chapter-item "><a href="integration_fleets_tutorial_cpp.html"><strong aria-hidden="true">8.2.1.2.</strong> Cpp Tutorial</a></li></ol></li></ol></li><li class="chapter-item "><a href="integration_free-fleet.html"><strong aria-hidden="true">8.3.</strong> Free Fleet</a></li><li class="chapter-item "><a href="integration_read-only.html"><strong aria-hidden="true">8.4.</strong> Read-Only Fleets</a></li><li class="chapter-item "><a href="integration_doors.html"><strong aria-hidden="true">8.5.</strong> Doors</a></li><li class="chapter-item "><a href="integration_lifts.html"><strong aria-hidden="true">8.6.</strong> Lifts (Elevators)</a></li><li class="chapter-item "><a href="integration_workcells.html"><strong aria-hidden="true">8.7.</strong> Workcells</a></li></ol></li><li class="chapter-item "><a href="rmf-web.html"><strong aria-hidden="true">9.</strong> RMF Web</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="ui.html"><strong aria-hidden="true">9.1.</strong> User Interfaces</a></li></ol></li><li class="chapter-item "><a href="security.html"><strong aria-hidden="true">10.</strong> Security</a></li><li class="chapter-item "><a href="roadmap.html"><strong aria-hidden="true">11.</strong> Roadmap</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -4458,7 +4458,7 @@ Furthermore, each robot's position will be updated live as the robots are moving
 <p>There are four <strong>Full Control</strong> fleets in our demo simulation, each with their own fleet-specific parameters. To better consolidate and set up these configurations upon initializing the fleet, they are stored in a <a href="https://github.com/open-rmf/rmf_demos/blob/main/rmf_demos/config/office/tinyRobot_config.yaml"><code>config.yaml</code></a> file. Paths to the configuration and navigation graph files are required when running the fleet adapter and manager. General fleet settings and capabilities are defined under the <code>rmf_fleet</code> section.</p>
 <p>The config file also takes care of robot-specific parameters within the fleet, such as the number of robots in the fleet, each of their names and their starting waypoints. For example, the <code>tinyRobot</code> fleet in Office demo world has two robots, so we append the configurations for each robot to the <code>robots</code> section in the config file.</p>
 <p>For users who are operating their robots in a different coordinate frame from RMF, the <code>reference_coordinate</code> section in the config file helps to perform any necessary transformations. Do note that RMF and the slotcar simulation robots share the same coordinate frame, so this transformation is not implemented in the demos fleet adapter.</p>
-<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/integration_fleets.md">Edit this page on GitHub.</a></footer><div style="break-before: page; page-break-before: always;"></div><h1 id="fleet-adapter-tutorial-python"><a class="header" href="#fleet-adapter-tutorial-python">Fleet Adapter Tutorial (Python)</a></h1>
+<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/integration_fleets.md">Edit this page on GitHub.</a></footer><div style="break-before: page; page-break-before: always;"></div><h1 id="fleet-adapter-tutorial"><a class="header" href="#fleet-adapter-tutorial">Fleet Adapter Tutorial</a></h1>
 <p><code>fleet_adapter</code> acts as a bridge between the robots and the core RMF system.</p>
 <p>Its responsibilities include but are not limited to:</p>
 <ul>
@@ -4487,6 +4487,12 @@ Furthermore, each robot's position will be updated live as the robots are moving
 <p>The fleet adapter will then send the navigation commands to the robot in appropriate API.</p>
 </li>
 </ul>
+<h2 id="tutorials"><a class="header" href="#tutorials">Tutorials</a></h2>
+<ul>
+<li><a href="./integration_fleets_tutorial_python.html">Python Tutorial</a></li>
+<li><a href="./integration_fleets_tutorial_cpp.html">Cpp Tutorial</a></li>
+</ul>
+<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/integration_fleets_tutorial.md">Edit this page on GitHub.</a></footer><div style="break-before: page; page-break-before: always;"></div><h1 id="fleet-adapter-python-tutorial"><a class="header" href="#fleet-adapter-python-tutorial">Fleet Adapter Python Tutorial</a></h1>
 <blockquote>
 <p>The tutorial provided below is based on the <a href="https://github.com/open-rmf/rmf_demos/tree/main/rmf_demos_fleet_adapter">rmf_demos_fleet_adapter</a> implemented in the <a href="https://github.com/open-rmf/rmf_demos">rmf_demos</a> repository. This specific implementation is written in Python and uses REST API as an interface between the fleet adapter and fleet manager.You may choose to use other APIs for your own integration.</p>
 </blockquote>
@@ -4806,7 +4812,107 @@ class RobotAPI:
 <p><code>battery_soc</code> will return battery status between 0 and 1.0</p>
 </li>
 </ul>
-<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/integration_fleets_tutorial.md">Edit this page on GitHub.</a></footer><div style="break-before: page; page-break-before: always;"></div><h1 id="free-fleet-1"><a class="header" href="#free-fleet-1">Free Fleet</a></h1>
+<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/integration_fleets_tutorial_python.md">Edit this page on GitHub.</a></footer><div style="break-before: page; page-break-before: always;"></div><h1 id="fleet-adapter-c-tutorial"><a class="header" href="#fleet-adapter-c-tutorial">Fleet Adapter C++ Tutorial</a></h1>
+<blockquote>
+<p>The files mentioned in this tutorial can be found <a href="https://github.com/open-rmf/rmf_ros2/tree/main/rmf_fleet_adapter/include/rmf_fleet_adapter/agv">here</a></p>
+</blockquote>
+<h2 id="adapterhpp"><a class="header" href="#adapterhpp"><a href="https://github.com/open-rmf/rmf_ros2/blob/main/rmf_fleet_adapter/include/rmf_fleet_adapter/agv/Adapter.hpp">Adapter.hpp</a></a></h2>
+<pre><code class="language-cpp">#ifndef RMF_FLEET_ADAPTER__AGV__ADAPTER_HPP
+#define RMF_FLEET_ADAPTER__AGV__ADAPTER_HPP
+
+#include &lt;rmf_fleet_adapter/agv/FleetUpdateHandle.hpp&gt;
+#include &lt;rmf_fleet_adapter/agv/EasyTrafficLight.hpp&gt;
+
+#include &lt;rmf_traffic/agv/VehicleTraits.hpp&gt;
+#include &lt;rmf_traffic/agv/Graph.hpp&gt;
+
+#include &lt;rclcpp/node.hpp&gt;
+
+namespace rmf_fleet_adapter {
+namespace agv {
+class Adapter : public std::enable_shared_from_this&lt;Adapter&gt;
+{
+public:
+
+  static std::shared_ptr&lt;Adapter&gt; init_and_make(
+    const std::string&amp; node_name,
+    std::optional&lt;rmf_traffic::Duration&gt; discovery_timeout = std::nullopt);
+
+  static std::shared_ptr&lt;Adapter&gt; make(
+    const std::string&amp; node_name,
+    const rclcpp::NodeOptions&amp; node_options = rclcpp::NodeOptions(),
+    std::optional&lt;rmf_traffic::Duration&gt; discovery_timeout = std::nullopt);
+
+  std::shared_ptr&lt;FleetUpdateHandle&gt; add_fleet(
+    const std::string&amp; fleet_name,
+    rmf_traffic::agv::VehicleTraits traits,
+    rmf_traffic::agv::Graph navigation_graph,
+    std::optional&lt;std::string&gt; server_uri = std::nullopt);
+
+  using Blockers = std::vector&lt;EasyTrafficLight::Blocker&gt;;
+
+  void add_easy_traffic_light(
+    std::function&lt;void(EasyTrafficLightPtr handle)&gt; handle_callback,
+    const std::string&amp; fleet_name,
+    const std::string&amp; robot_name,
+    rmf_traffic::agv::VehicleTraits traits,
+    std::function&lt;void()&gt; pause_callback,
+    std::function&lt;void()&gt; resume_callback,
+    std::function&lt;void(Blockers)&gt; deadlock_callback = nullptr);
+
+
+  /// Get the rclcpp::Node that this adapter will be using for communication.
+  std::shared_ptr&lt;rclcpp::Node&gt; node();
+
+  /// const-qualified node()
+  std::shared_ptr&lt;const rclcpp::Node&gt; node() const;
+
+  /// Begin running the event loop for this adapter. The event loop will operate
+  /// in another thread, so this function is non-blocking.
+  Adapter&amp; start();
+
+  /// Stop the event loop if it is running.
+  Adapter&amp; stop();
+
+  /// Wait until the adapter is done spinning.
+  ///
+  /// \sa wait_for()
+  Adapter&amp; wait();
+
+  /// Wait until the adapter is done spinning, or until the maximum wait time
+  /// duration is reached.
+  ///
+  /// \sa wait()
+  Adapter&amp; wait_for(std::chrono::nanoseconds max_wait);
+
+  class Implementation;
+private:
+  Adapter();
+  rmf_utils::unique_impl_ptr&lt;Implementation&gt; _pimpl;
+};
+
+using AdapterPtr = std::shared_ptr&lt;Adapter&gt;;
+using ConstAdapterPtr = std::shared_ptr&lt;const Adapter&gt;;
+
+} // namespace agv
+} // namespace rmf_fleet_adapter
+
+#endif // RMF_FLEET_ADAPTER__AGV__ADAPTER_HPP
+
+</code></pre>
+<p><a href="https://github.com/open-rmf/rmf_ros2/blob/main/rmf_fleet_adapter/include/rmf_fleet_adapter/agv/Adapter.hpp#L51"><code>init_and_make</code></a> will initialize rclcpp context and makes an adapter instance.You can add the fleets to be adapted.
+takes two arguments</p>
+<ul>
+<li>node_name - The name of rclcpp node that will be produced for this adapter.</li>
+<li>discovery_timeout - The minimum time it will wait to discover the schedule node before giving up. If the default <code>rmf_utils:nullopt</code> is used it will use <code>discovery_timeout</code>node parameter or wait for 1 minute if<code>discovery_timeout</code> is not defined.</li>
+</ul>
+<p><a href="https://github.com/open-rmf/rmf_ros2/blob/main/rmf_fleet_adapter/include/rmf_fleet_adapter/agv/Adapter.hpp#L75"><code>make</code></a> instantiates an rclcpp::Noe like <code>init_and_make</code> however it is more customisable.</p>
+<ul>
+<li>node_name - The name of rclcpp node that will be produced for this adapter.</li>
+<li></li>
+<li>discovery_timeout - The minimum time it will wait to discover the schedule node before giving up. If the default <code>rmf_utils:nullopt</code> is used it will use <code>discovery_timeout</code>node parameter or wait for 1 minute if<code>discovery_timeout</code> is not defined.</li>
+</ul>
+<footer id="open-on-gh">Found a bug? <a href="https://github.com/osrf/ros2multirobotbook/edit/main/src/integration_fleets_tutorial_cpp.md">Edit this page on GitHub.</a></footer><div style="break-before: page; page-break-before: always;"></div><h1 id="free-fleet-1"><a class="header" href="#free-fleet-1">Free Fleet</a></h1>
 <p>In the event that the user wishes to integrate a standalone mobile robot which doesn't come with its own fleet management system, the open source fleet management system <code>free_fleet</code> could be used.</p>
 <p>The <code>free_fleet</code> system is split into a client and a server. The client is to be run on each of these standalone mobile robots alongside their navigation software and is intended to have direct control over the mobile robot while at the same time monitor its status and report back to the server. The client's base implementation is designed to allow interaction with different configurations of mobile robots yet report to the same server. This way, users are able to use <code>free_fleet</code> to manage a heterogenrous fleet of robots, each using different distributions of ROS, versions of ROS, navigation software, or onboard communication protocols.</p>
 <p>The server is run on a central computer and consolidates the incoming status updates from each client to be either visualized using a UI, or relayed upstream to RMF. The server also relays commands from the user via the UI or from RMF down to the clients to be executed. Each server can work with multiple clients at a time, hence it serves the role of a fleet management system. The server can be implemented and used as its own fleet management system or work with larger systems like RMF, bridging the gap between each mobile robot's API and RMF's API and interface.</p>
