deploy: f7762adec01190d16d5d95b7f34bcfaba201153c

--- a/print.html
+++ b/print.html
@@ -4931,26 +4931,7 @@ takes two arguments</p>
 </ul>
 <h2 id="fleetupdatehandlehpp"><a class="header" href="#fleetupdatehandlehpp"><a href="https://github.com/open-rmf/rmf_ros2/blob/main/rmf_fleet_adapter/include/rmf_fleet_adapter/agv/FleetUpdateHandle.hpp">FleetUpdateHandle.hpp</a></a></h2>
 <p>The Update Handle works as handler between the fleet robots and the fleetadapter.</p>
-<pre><code class="language-c++">#ifndef RMF_FLEET_ADAPTER__AGV__FLEETUPDATEHANDLE_HPP
-#define RMF_FLEET_ADAPTER__AGV__FLEETUPDATEHANDLE_HPP
-
-#include &lt;rmf_fleet_adapter/agv/RobotUpdateHandle.hpp&gt;
-#include &lt;rmf_fleet_adapter/agv/RobotCommandHandle.hpp&gt;
-
-#include &lt;rmf_task_msgs/msg/delivery.hpp&gt;
-#include &lt;rmf_task_msgs/msg/task_profile.hpp&gt;
-
-#include &lt;rmf_battery/agv/BatterySystem.hpp&gt;
-#include &lt;rmf_battery/DevicePowerSink.hpp&gt;
-#include &lt;rmf_battery/MotionPowerSink.hpp&gt;
-
-#include &lt;rmf_task/RequestFactory.hpp&gt;
-
-#include &lt;nlohmann/json.hpp&gt;
-#include &lt;rmf_task/Activator.hpp&gt;
-#include &lt;rmf_task_sequence/Phase.hpp&gt;
-#include &lt;rmf_task_sequence/Event.hpp&gt;
-
+<pre><code class="language-c++">
 namespace rmf_fleet_adapter {
 namespace agv {
 
@@ -5140,7 +5121,9 @@ Specify the device sink for special tools used by the vehicles in this fleet.</l
 <li><code>recharge_threshold</code>
 The threshold for state of charge below which robots in this fleet
 will cease to operate and require recharging. A value between 0.0 and
-1.0 should be specified.</li>
+1.0 should be specified.
+When the robot is idle, a timer periodically computes the estimated battery drain if the robot were to head back to the charger now. If the battery level after the estimated drain is within a safety factor applied to the recharge_threshold, the TaskManager will automatically begin a task to take the robot back to its charging station.
+The recharge_threshold is used in a similar manner during task allocation. When deciding the order of tasks performed, the TaskPlanner will estimate the battery level of the robot after performing a task A. If the estimate is below the recharge_threshold, it will then check if the robot can perform task A if it performed a recharge task before this. If this is the case then it will automatically include a recharge task before task A. If it still cannot perform task A even after recharging, it will discard the possibility of doing task A in that sequence.</li>
 <li><code>recharge_soc</code>
 The state of charge to which robots in this fleet should be charged up
 to by automatic recharging tasks. A value between 0.0 and 1.0 should be
