--- a/integration_fleets_tutorial.html
+++ b/integration_fleets_tutorial.html
@@ -138,7 +138,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="fleet-adapter-tutorial"><a class="header" href="#fleet-adapter-tutorial">Fleet Adapter Tutorial</a></h1>
+                        <h1 id="fleet-adapter-tutorials"><a class="header" href="#fleet-adapter-tutorials">Fleet Adapter Tutorials</a></h1>
 <p><code>fleet_adapter</code> acts as a bridge between the robots and the core RMF system.</p>
 <p>Its responsibilities include but are not limited to:</p>
 <ul>
